<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Self Evaluation </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="loading">Loading...</string>
    <string name="finish">Finish</string>
    <string name="radiobutton1">RadioButton</string>
    <string name="radiobutton2">RadioButton</string>
    <string name="radiobutton3">RadioButton</string>
    <string name="radiobutton4">RadioButton</string>
    <string name="next"><![CDATA[>>]]></string>
    <string name="prev"><![CDATA[<<]]></string>
    <string name="timer">Timer</string>

</resources>