<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/quizLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mTextField"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"
        android:text="00:00"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:textColor="#4CAF50"/>
<ScrollView>
    <EditText
        android:id="@+id/question"
        android:layout_height="wrap_content"
        android:lines="8"
        android:editable="false"
        android:clickable="false"
        android:cursorVisible="false"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:gravity="center|center_horizontal" android:inputType="">

        <requestFocus />
    </EditText>

</ScrollView>



<ScrollView>
    <RadioGroup
        android:id="@+id/answers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/a0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton1" />

        <RadioButton
            android:id="@+id/a1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton2" />

        <RadioButton
            android:id="@+id/a2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton3" />

        <RadioButton
        android:id="@+id/a3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radiobutton4" />
    </RadioGroup>
</ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center|bottom">

        <Button
            android:id="@+id/Prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.21"
            android:text="@string/prev"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.18"
            android:text="@string/finish"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/Next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.23"
            android:text="@string/next"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</TableLayout>